--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "node-appwrite": "^14.1.0",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
