--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "5",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "node-appwrite": "^14.1.0",
